--- a/회의록/프로젝트 일정.md
+++ b/회의록/프로젝트 일정.md
@@ -17,4 +17,4 @@
 #### 3. 시나리오에 따른 테스트 케이스 시현 및 정리. - 11월 29일 수요일
 #### 4. 시나리오에 따른 테스트 케이스 정리. - 11월 30일 목요일
 #### 5. 시나리오에 따른 테스트 케이스 정리. - 12월 01일 금요일
-#### 6.12월 04일 월요일 발표.
+#### 6. 12월 04일 월요일 발표.
