docs : 11.27 회의록 작성

--- a/회의록/2023-11-27 회의록.md
+++ b/회의록/2023-11-27 회의록.md
@@ -18,18 +18,39 @@
 
 #### 2. 서비스 선정 및 요구 사항 및 시나리오 정리
 
-일정이 너무 빠뜻하지 않은가? (재영)
-- 서비스를 빠르게 선정한 뒤에 나타난 문제점을 추가로 수정해나가려고 일정을 잡음.(혜선)
+- 프로젝트 일정에 관한 논의  
+    일정이 너무 빠뜻하지 않은가? (재영)  
+    서비스를 빠르게 선정한 뒤에 나타난 문제점을 추가로 수정해나가려고 일정을 잡음.(혜선)
 
+- 서비스 아이디어
 
-임재영 
+    - 임재영  
 OTT 통합 추천: 랭킹이나, 좋아하는 배우 하정우를 치면 하정우 관련 영화와 드라마가 나오며 추천됨.
 
-이종표 
-온도에 맞는 옷 추천 : 오늘 온도에 맞는 옷을 추천, 온도를 선택해서 옷을 추천 
+    -   이종표  
+     온도에 맞는 옷 추천 : 오늘 온도에 맞는 옷을 추천, 온도를 선택해서 옷을 추천 
 
-조훈 
+    -  조훈  
 국내 여행 노선 추천 : 여행 경비를 적으면 여행 노선을 추천해준다.  
 
-이혜선 
+    - 이혜선  
 도시락 배달시스템 : 혼자사는 1인 가구들이 늘어나며 밥을 잘 못챙겨 먹는 사람들을 위해. 도시락을 주문하면 매일 다른 도시락을 배달해줌. 
+
+
+논의를 통하여 OTT통합 추천 서비스 선정
+
+#### 3. 구체적인 서비스 개요에 관한 회의
+
+- 회의 결과 
+
+1. 영화의 기본 정보 조회
+2. 순위
+3. 회원 개인의 찜(좋아요) 기능 
+4. 특정 기준으로 영화를 정렬하는 기능
+5. 카테고리를 통한 검색
+6. 연관되는 영화 추천
+
+- 조원 별 담당 업무
+
+    전원 : 개념적 모델링을 수행 후, 11/27일 ERD 개별적으로 그려오기
+
